--- a/test/meson.build
+++ b/test/meson.build
@@ -14,7 +14,7 @@ test_uint128 = executable('test_uint128',
 test_PMR_operator = executable('test_PMR_operator',
   'test_PMR_construct.cpp',
   include_directories: inc,
-  dependencies: [eigen_dep, hdf5_dep, omp_dep, pthash_dep],
+  dependencies: [g_deps, eigen_dep, hdf5_dep, omp_dep],
   link_with: operator_lib,
   install : false
   )
