started a big old refactor, this repo is becoming a mess

--- a/bench/meson.build
+++ b/bench/meson.build
@@ -19,6 +19,15 @@ benchmark_uint128 = executable('benchmark_uint128',
                               include_directories: inc,
                               install : false)
 
+
+bench_operator_mpi_lib = static_library('expectation_eval_mpi', ['../src/operator_mpi.cpp', '../src/operator.cpp'],
+  dependencies: [g_deps, eigen_dep, omp_dep, spectra_dep, mpi_dep], #todo purge spectra
+  include_directories: inc,
+  link_with: operator_lib,
+  cpp_args: [target_args, '-DSUBSPACE_ED_BENCHMARK_OPERATIONS']
+  )
+
+
 bench_apply = executable('bench_apply',
   'bench_apply.cpp',
   include_directories: inc,
@@ -32,7 +41,7 @@ bench_apply_mpi = executable('bench_apply_mpi',
   'bench_apply_mpi.cpp',
   include_directories: inc,
   dependencies: [g_deps, eigen_dep, spectra_dep, mpi_dep],
-  link_with: [expectation_eval, expectation_eval_mpi],
+  link_with: [bench_operator_mpi_lib],
   install: false
   )
   
