--- a/bench/meson.build
+++ b/bench/meson.build
@@ -16,22 +16,13 @@
 # Benchmark test (if you want performance testing)
 benchmark_uint128 = executable('benchmark_uint128',
                               'benchmark_uint128.cpp',
-                              include_directories: inc,
+                              include_directories: common_inc,
                               install : false)
-
-
-bench_operator_mpi_lib = static_library('expectation_eval_mpi', ['../src/operator_mpi.cpp', '../src/operator.cpp'],
-  dependencies: [g_deps, eigen_dep, omp_dep, spectra_dep, mpi_dep], #todo purge spectra
-  include_directories: inc,
-  link_with: operator_lib,
-  cpp_args: [target_args, '-DSUBSPACE_ED_BENCHMARK_OPERATIONS']
-  )
-
 
 bench_apply = executable('bench_apply',
   'bench_apply.cpp',
-  include_directories: inc,
-  dependencies: [g_deps, eigen_dep, spectra_dep],
+  include_directories: [inc],
+  dependencies: [operator_dep, common_dep],
   link_with: expectation_eval,
   install: false
   )
@@ -39,14 +30,10 @@ bench_apply = executable('bench_apply',
 
 bench_apply_mpi = executable('bench_apply_mpi',
   'bench_apply_mpi.cpp',
-  include_directories: inc,
-  dependencies: [g_deps, eigen_dep, spectra_dep, mpi_dep],
+  include_directories: [inc, operator_inc],
+  dependencies: [common_dep, eigen_dep, mpi_dep],
   link_with: [bench_operator_mpi_lib],
   install: false
   )
   
 
-# Register benchmark (optional)
-benchmark('uint128_performance', benchmark_uint128,
-         timeout : 60,
-         suite : 'benchmark')
