removed LAPACK waste of time

--- a/test/meson.build
+++ b/test/meson.build
@@ -21,6 +21,14 @@ test_PMR_operator = executable('test_PMR_operator',
 test_lanczos = executable('test_lanczos',
   'test_lanczos.cpp',
   include_directories: inc,
+  dependencies: [operator_mpi_dep, linalg_routines_dep],
+  install: false
+  )
+
+
+test_lanczos_mpi = executable('test_lanczos_mpi',
+  'test_lanczos_mpi.cpp',
+  include_directories: inc,
   dependencies: [operator_dep, linalg_routines_dep],
   install: false
   )
