--- a/components/linalg_routines/meson.build
+++ b/components/linalg_routines/meson.build
@@ -9,11 +9,9 @@ linalg_routines_lib = static_library('linalg_routines', linalg_routines_src,
   cpp_args: target_args
 )
 
-
-
 linalg_routines_dep = declare_dependency(
   include_directories: linalg_routines_inc,
   link_with: linalg_routines_lib,
-  dependencies: [ lapack_dep, blas_dep]
+  dependencies: [ lapack_dep, eigen_dep, blas_dep]
 )
 
