--- a/components/build_basis/meson.build
+++ b/components/build_basis/meson.build
@@ -5,16 +5,16 @@ basis_common_src= [
   'src/pyro_tree.cpp',
   ]
 
-spinon_basis_sources = files(['src/gen_spinon_basis.cpp'] + basis_common_src) 
-spinon_basis_big_sources = files(['src/sbsearch.cpp'] + basis_common_src) 
+spinon_basis_sources = files(['gen_spinon_basis.cpp'] + basis_common_src) 
+spinon_basis_big_sources = files(['sbsearch.cpp'] + basis_common_src) 
 
-partition_basis = executable('partition_basis', files('src/partition_basis.cpp'),
+partition_basis = executable('partition_basis', files('partition_basis.cpp'),
     dependencies: common_dep,
     include_directories: basis_inc,
     cpp_args: target_args
     )
 
-polyring_basis = executable('polyring_basis', files('src/polyring_basis.cpp'), 
+polyring_basis = executable('polyring_basis', files('polyring_basis.cpp'), 
   dependencies: [common_dep, eigen_dep, operator_dep],
   include_directories:basis_inc,
   cpp_args: target_args,
@@ -35,7 +35,7 @@ sbsearch = executable('sbsearch', spinon_basis_big_sources,
   install: true
   )
 
-merge_shards = executable('merge_shards', 'src/merge_shards.cpp',
+merge_shards = executable('merge_shards', 'merge_shards.cpp',
   dependencies: common_dep,
   include_directories:basis_inc,
   cpp_args: target_args,
