added a test for the MPI sharded version

--- a/components/build_basis/meson.build
+++ b/components/build_basis/meson.build
@@ -1,9 +1,14 @@
 
 basis_inc = [include_directories('include'), vendor_inc, common_inc]
 
-basis_common_src= [
+basis_common_src= files( [
   'src/pyro_tree.cpp',
-  ]
+  ])
+
+basis_common_mpi_src = files([
+'src/pyro_tree_mpi.cpp',
+  'src/pyro_tree.cpp'
+])
 
 
 partition_basis = executable('partition_basis', files('partition_basis.cpp'),
@@ -20,15 +25,15 @@ polyring_basis = executable('polyring_basis', files('polyring_basis.cpp'),
   )
 
 gen_spinon_basis = executable('gen_spinon_basis',
-  files(['gen_spinon_basis.cpp'] + basis_common_src), 
+  [files(['gen_spinon_basis.cpp']), basis_common_src], 
   dependencies: common_dep,
   include_directories: basis_inc,
   cpp_args: target_args,
   install: true
  )
 
-sbsearch = executable('sbsearch', files(['sbsearch.cpp'] + basis_common_src) 
-, 
+sbsearch = executable('sbsearch', 
+  [files(['sbsearch.cpp']), basis_common_src],
   dependencies: common_dep,
   include_directories:basis_inc,
   cpp_args: target_args,
@@ -37,7 +42,7 @@ sbsearch = executable('sbsearch', files(['sbsearch.cpp'] + basis_common_src)
 
 
 sbsearch_mpi = executable('sbsearch_mpi', 
-  files(['sbsearch_mpi.cpp', 'src/pyro_tree_mpi.cpp'] + basis_common_src), 
+  [files(['sbsearch_mpi.cpp']),  basis_common_mpi_src],
   dependencies: [common_dep, mpi_dep],
   include_directories:basis_inc,
   cpp_args: target_args,
