added a missing header

--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,7 @@ driver/rundata
 driver/*.plan
 subprojects/mr3smp
 subprojects/pthash
+subprojects/nlohmann_json-*
+subprojects/packagecache
 test/lattice_files/*.basis.csv
 test/lattice_files/*.basis.h5
