--- a/meson.build
+++ b/meson.build
@@ -261,6 +261,14 @@ eval_observables = executable('eval_observables',
   cpp_args: target_args
   )
 
+ring_normed = executable('ring_normed',
+  files(['src/ring_normed.cpp', 'src/expectation_eval.cpp']),
+  dependencies: [g_deps, eigen_dep, omp_dep, operator_dep, linalg_routines_dep, spectra_dep],
+  include_directories: inc,
+  link_with: expectation_eval,
+  cpp_args: target_args
+  )
+
 
 eval_observables_mpi = executable('eval_observables_mpi',
   files(['src/eval_observables_mpi.cpp', 'src/expectation_eval.cpp']),
