--- a/test/meson.build
+++ b/test/meson.build
@@ -58,12 +58,12 @@ test_apply_mpi = executable('test_apply_mpi',
   )
 
 
-test_mpi_alignment = executable('test_mpi_alignment', 
-  ['test_mpi_alignment.cpp', basis_common_mpi_src],
-  include_directories: inc + basis_inc,
-  dependencies: [mpi_dep, common_dep, ],
-  install: false
-  )
+#test_mpi_alignment = executable('test_mpi_alignment', 
+#  ['test_mpi_alignment.cpp', basis_common_mpi_src],
+#  include_directories: inc + basis_inc,
+#  dependencies: [mpi_dep, common_dep, ],
+#  install: false
+#  )
 
 
 #test_ftlm_ops = executable('test_ftlm_ops','test_ftlm_ops.cpp',
